# gutenberg-rs

./: .gitignore  Cargo.toml  LICENSE-MIT.md  README  README.md
.github/workflows/: publish.yml  rust.yml
benches/: macrobenches.rs  microbenches.rs
examples/: generate_cache.rs
src/: book.rs  db_cache.rs  error.rs  fst_parser.rs  fst_parser_file_node.rs  fst_parser_node.rs  fst_parser_or_node.rs  fst_parser_type.rs  gutenbergindex.db.sql  gutenbergindex_indices.db.sql  lib.rs  main.rs  rdf_parser.rs  settings.rs  sqlite_cache.rs  text_get.rs  textget.rs  utils.rs  xml_parser.rs
tests/: integration_tests.rs  sanity.rs
tests/documents/: pg1.rdf  pg1000.rdf  pg25.rdf  pg41418.rdf  pg732.rdf
