[package]
name = "gutenberg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = {version = "0.11.12", features=["stream"]}
indicatif = "0.17.1"
futures-util = "0.3.25"
tokio = { version = "1.13.0", features = ["full"] }
bzip2 = "0.4.3"
tar = "0.4.38"
fast-xml ="0.23.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
indexmap = "1.9.1"
num-traits = "0.2"
num-derive = "0.3.3"
thiserror = "1.0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
flate2 = "1.0"
bytes = "1.2.1" 
url = "2.3.1"