[package]
name = "gutenberg-rs"
version = "0.1.3"
edition = "2021"

homepage = "https://www.raduangelescu.com"
documentation = "https://docs.rs/gutenberg-rs"
repository = "https://github.com/raduangelescu/gutenberg-rs"
description = "This crate is used to get information and data from gutenberg (https://www.gutenberg.org/)"

keywords = ["nlp", "gutenberg", "books", "textcache"]
categories = ["parsing", "parser-implementations", "cache", "scraper"]
license = "MIT"
rust-version = "1.64"
include = ["src/*", "LICENSE-MIT.md", "README.md"]

[dependencies]
reqwest = {version = "0.11.12", features=["stream"]}
indicatif = "0.17.1"
futures-util = "0.3.25"
tokio = { version = "1.13.0", features = ["full"] }
bzip2 = "0.4.3"
tar = "0.4.38"
quick-xml ="0.26.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
indexmap = "1.9.1"
num-traits = "0.2"
num-derive = "0.3.3"
thiserror = "1.0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
flate2 = "1.0"
bytes = "1.2.1" 
url = "2.3.1"
walkdir = "2.3.2"

[dev-dependencies]
criterion = "0.4"
pretty_assertions = "1.3"

[lib]
bench = false
doctest = false

[[bench]]
name = "microbenches"
harness = false
path = "benches/microbenches.rs"

[[bench]]
name = "macrobenches"
harness = false
path = "benches/macrobenches.rs"

[features]
default = []

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docs_rs` to enable feature requirements
# See https://stackoverflow.com/questions/61417452
rustdoc-args = ["--cfg", "docs_rs"]

[[test]]
name = "sanity"
required-features = ["sanity"]
path = "tests/sanity.rs"